v0.8:

NZBLeecher:

o Fixed a bug causing the downloader to break and the scroller to scroll
  excessive lines, after a certain situation where hellanzb was paused twice


v0.7:

Daemon:

o Added the -D option to run the hellanzb queue daemon as an actual unix daemon
  process (forks and exits)

o Changed most of the RPC calls to return the output of a list or status
  call

o Added the enqueuenewzbin RPC call, downloads the NZB with the specified NZB ID
  from www.newzin.com, as long as you've included your newzbin login information
  in hellanzb.conf

o Changed the RPC list call to show NZB ids by default

o RPC status call now shows queued MB, ETA, NZB ids and the value of
  Hellanzb.MAX_RATE (if MAX_RATE is greater than 0)

o Invalid NZB files weren't being removed from the list of current downloads
  seen in the RPC status call (fixed)

o Fixed an odd case where a segment with no articleData could prevent the queue
  from continuing onto the next NZB. Also fixed a couple other possible bugs
  that might have caused hellanzb to deadlock in between NZBs

NZBLeecher:

o Optimized the downloader. Using approximately 2-4% less CPU on an Athlon
  2600+, FreeBSD 4.10

o Added automatic failover -- multiple server pools (defineServer lines) will
  now automatically requeue articles totally missing from their respective
  servers for redownloading on other server pools (Thanks very much
  Rubberneck!)

PostProcessor:

o Fixed the defunct process bug affecting some Linux distributions (thanks
  georgek)

o No longer using /bin/file for identifying rars. Running /bin/file via twisted
  seems to have triggered a twisted bug where it wouldn't allow the /bin/file
  process to exit cleanly (on some if not all platforms)

o Added assembly support for split .ts files, recognizes patterns such as:
    hello.001.TS                hi.0001.ts
    hello.002.TS                hi.0002.ts
                                hi.0003.ts

ArticleDecoder:
